subdefnitions plus/minus

--- a/app/views/definitions/_literary_quotation.html.erb
+++ b/app/views/definitions/_literary_quotation.html.erb
@@ -104,11 +104,12 @@
 	</dl>
 <% end %>
 		
+<!--		
 <%# !if literary_quotation.meta.blank? %>
 		<dl class="inner_dl">
 				<dd>
-		<% t = Time.now %>
+		<%# t = Time.now %>
 		<%#= render :partial => 'public_meta', :locals => {:meta_location => t.to_f, :meta => literary_quotation.meta , :head_id => head_id} %>
 				</dd>
 		</dl>
-<%# end %>
+<%# end %> -->
