--- a/app/views/definitions/_public_term_sub_content.html.erb
+++ b/app/views/definitions/_public_term_sub_content.html.erb
@@ -482,10 +482,13 @@
 				<%= link_to d.literary_period_type.title + ' (literary period)', d.literary_period_type.get_url_with_parent if !d.literary_period_type.blank? %><br>
 				<%= link_to d.literary_form_type.title + ' (literary form)', d.literary_form_type.get_url_with_parent if !d.literary_form_type.blank? %><br>
 				<%= link_to d.register_type.title + ' (register)', d.register_type.get_url_with_parent if !d.register_type.blank? %><br>
-				<% assoc = d.definition_category_associations.find(:all, :conditions => {:category_branch_id => 119}) %>
+				
 				
 				<!-- literary genre -->
+				
+				<% assoc = d.definition_category_associations.find(:all, :conditions => {:category_branch_id => 119}) %>
 				<% if !assoc.blank? %>
+				<b>LITERARY GENRE:</b>
 					<%= assoc.collect{|a| link_to a.category.title, a.category.get_url_with_parent}.join(', ').html_safe %>
 				<% end %>
 			</td>
