etymology contributos and expand/collapse icons only when additional information exists

--- a/app/views/definitions/_etymology.html.erb
+++ b/app/views/definitions/_etymology.html.erb
@@ -33,12 +33,13 @@
 		</dd>
 	</dl>
 <% end %>
-		
+
+<!--		
 <%# if etymology.meta != nil%>
 		<dl class="inner_dl">
 				<dd class="inner_dd">
-		<% t = Time.now %>
+		<%# t = Time.now %>
 		<%#= render :partial => 'public_meta', :locals => {:meta_location => t.to_f, :meta => etymology.meta , :head_id => head_id} %>
 				</dd>
 		</dl>
-<%# end %>
+<%# end %> -->
