fixing link to translation tool

--- a/app/views/definitions/_other_dictionaries_index.html.erb
+++ b/app/views/definitions/_other_dictionaries_index.html.erb
@@ -123,7 +123,7 @@ $(document).ready(function() {
 		<% end %>
 		<% if @richard_baron_definitions.size > 0 %>
 		<tr><td>
-			<b>Richard Baron Dictionary:</b>
+			<b>Richard Barron Dictionary:</b>
 		</td><tr>
 		<% end %>
 		<% for d in @richard_baron_definitions %>
@@ -136,9 +136,9 @@ $(document).ready(function() {
 				</span>
 			</td>
 				<td>
-					<%= link_to image_tag('pencil.png',:border => 0), {:controller => 'old_definitions', :action => 'edit_dynamic', :id => d.id, :internal=>'edit_box', :public=>'yes', :head_id => @head_id},  :remote => true, :class => 'ui_definition_dialog', :title=>'Other Dictionary (Richard Baron) Edit' %>
-					<%#= link_to_remote image_tag('pencil.png',:border => 0), :update => 'popup_dialog', :method => :get, :url => {:controller => 'old_definitions', :action => 'edit_dynamic', :id => d.id, :internal=>'edit_box', :public=>'yes', :head_id => @head_id}, :html => {:class => 'ui_definition_dialog', :title=>'Other Dictionary (Richard Baron) Edit'} %>
-					<%##= link_to 'Edit', url_for(:controller => 'old_definitions', :action => 'edit_dynamic', :id => d.id, :internal=>'edit_box', :public=>'yes', :head_id => @head_id,  :height=>500,:width=>670, :modal=>true) , :class=>:thickbox, :title=>'Other Dictionary (Richard Baron) Edit' %>			
+					<%= link_to image_tag('pencil.png',:border => 0), {:controller => 'old_definitions', :action => 'edit_dynamic', :id => d.id, :internal=>'edit_box', :public=>'yes', :head_id => @head_id},  :remote => true, :class => 'ui_definition_dialog', :title=>'Other Dictionary (Richard Barron) Edit' %>
+					<%#= link_to_remote image_tag('pencil.png',:border => 0), :update => 'popup_dialog', :method => :get, :url => {:controller => 'old_definitions', :action => 'edit_dynamic', :id => d.id, :internal=>'edit_box', :public=>'yes', :head_id => @head_id}, :html => {:class => 'ui_definition_dialog', :title=>'Other Dictionary (Richard Barron) Edit'} %>
+					<%##= link_to 'Edit', url_for(:controller => 'old_definitions', :action => 'edit_dynamic', :id => d.id, :internal=>'edit_box', :public=>'yes', :head_id => @head_id,  :height=>500,:width=>670, :modal=>true) , :class=>:thickbox, :title=>'Other Dictionary (Richard Barron) Edit' %>			
 					<%##= link_to 'Edit', :controller => 'old_definitions', :action => 'edit_dynamic', :id => d.id, :params => {'head_id' => @head_id} %>
 					
 					<%#= link_to 'Delete', {:action => 'delete_old_definition', :id => params[:id], :params => {:other_id => d.id }}, :confirm => 'Are you sure want to delete this entry?'%>
